# SimDeeplink

./: LICENSE  README.md
SimDeeplink/: SimDeeplinkApp.swift  SimDeeplinkVIew.swift
SimDeeplink.xcodeproj/: project.pbxproj
SimDeeplink.xcodeproj/xcshareddata/xcschemes/: SimDeeplink.xcscheme
SimDeeplink/App/: AppDelegate.swift  SimDeeplinkApp.swift
SimDeeplink/Assets.xcassets/simdeeplink_bar.imageset/: Contents.json
SimDeeplink/Extension/: Color+Extension.swift  String+Extension.swift
SimDeeplink/Module/: BootedSimulatorView.swift  DisabledOverlay.swift  SimComboBox.swift  SimDeeplinkView.swift  SimulatorSectionView.swift  SimulatorWatcher.swift
SimDeeplink/Module/Emulator/: BootedEmulatorView.swift  EmulatorComboBox.swift  EmulatorSectionView.swift  EmulatorView.swift  EmulatorWatcher.swift
SimDeeplink/Module/Simulator/: BootedSimulatorView.swift  SimulatorComboBox.swift  SimulatorSectionView.swift  SimulatorView.swift  SimulatorWatcher.swift
SimDeeplink/Utils/: ColorUtils.swift  SystemToolChecker.swift
SimDeeplinkTests/: SimDeeplinkTests.swift
SimDeeplinkUITests/: SimDeeplinkUITests.swift  SimDeeplinkUITestsLaunchTests.swift
crossplatform/: package-lock.json  package.json
crossplatform/src/: App.css  App.tsx
crossplatform/src-tauri/: Cargo.toml  tauri.conf.json
crossplatform/src-tauri/src/: command.rs  emulator.rs  fns.rs  main.rs  tray.rs
